aggiunto il tag p nell'html per stampare i due messaggi separatamente

--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <title>Biglietti del treno</title>
 </head>
 <body>
+    <div>
+        <p id="sconto"></p>
+        <p id="prezzo"></p>
+    </div>
     
-    <h1 id="prezzo"></h1>
     <script type="text/javascript" src="main.js">
     </script>
 </body>
